Added changes from home to index

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 		<p>
 		  My name is Advait Risbud and I am a sophomore in the <a href="https://www.iitb.ac.in/mems/en">Dept. of Metallurigcal Engineering 
 		  and Materials Science at IIT Bombay</a>. Here you can find information about the <a href="courses.html">courses</a> I have taken, projects I am doing and some poorly sorted humour of an even poorer quality. Please note that this website is a work in progress so you might find changes from time to time. 
+		  <br>
+		  If you are in my tutorial batch for PH108 then you can find the tutorial solutions <a href="Ph108.html">here</a>.
 		</p>
 	  
 	</body>
