--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<link rel="stylesheet" href="test.css">
 	</head>
 	<body class="sapUiBody" id="content">
-		<img src="std_photo (2).jpeg" alt="God's last mistake"  
+		<img src="picture.jpeg" alt="God's last mistake"  
 		width="150" 
 		height="200">
 	   
